# NeoAsist

./: .gitignore  CMakeLists.txt  HTBManager2.0.py  HTBmanager.py  LISENCE  README.md  conanfile.txt  diagram.txt  go.mod  go.sum  htb.conf  htbmanage.py  lisence.txt  makefile  tags  variables.py
errors/: __init__.py
htb/: main.go
htb/api/: api.go
htb/config/: config.go
htb/machines/: machines.go
local/: __init__.py
online/: __init__.py
src/: api.go  api_tests.go  attacks.cpp  attacks.h  config.cpp  config.go  config.h  config_test.go  config_tests.go  dbug.cpp  dbug.h  factories.cpp  factories.h  main.cpp  main.go  main_tests.go  organizing.go  organizing_tests.go  services.cpp  services.h  target.cpp  target.h
src/config/: config.cpp  config.hpp
src/cpp/: attacks.cpp  config.cpp  dbug.cpp  factories.cpp  services.cpp  target.cpp
src/debug/: dbug.cpp  dbug.h
src/service/: services.cpp  services.h
templates/machines/: machines.go
tests/: config.cpp  config.hpp  config.toml  config.yaml
